option java_package = "fr.kissy.banshee.proto";
option java_outer_classname = "ObjectDTO";
option java_generic_services = false;

import "Proto/Debug/ObjectProperty.proto";

message ObjectProto {
    required string id = 1;
    required string name = 2;
    optional string category = 3 [default = "default"];
    repeated ObjectPropertyProto objectProperties = 4;
}