option java_package = "fr.kissy.banshee.proto";
option java_outer_classname = "ObjectPropertyDto";
option java_generic_services = false;

import "Proto/Common/Property.proto";

message ObjectPropertyProto {
    optional string category = 1 [default = "default"];
    repeated PropertyProto properties = 2;
}